// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:timeline items 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            detailExpandedText
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(79, 134, 244);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--success"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(255, 178, 0);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(79, 134, 244);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--success"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 2`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-left"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(255, 178, 0);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(79, 134, 244);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--success"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 3`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-alternate"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(255, 178, 0);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(79, 134, 244);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--success"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 4`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-horizontal cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(255, 178, 0);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(79, 134, 244);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--success"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 5`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
          style=""
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--success"
          style=""
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(79, 134, 244);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
          style="background-color: rgb(255, 178, 0);"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline source 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          数据开发
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            展开
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            2019-02-07detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          管理中心
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            展开
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            2019-02-08detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round cxd-TimelineItem-round--warning"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          SQL语句
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            展开
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            2019-02-09detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-compress-alt"
            icon="compress-alt"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            展开
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            2019-02-10detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round"
        />
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            展开
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            2019-02-11detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-button"
          >
            展开
            <div
              class="cxd-TimelineItem-detail-arrow false"
            >
              <icon-mock
                classname=" icon-down-arrow-bold"
                icon="down-arrow-bold"
              />
            </div>
          </div>
          <div
            class="cxd-TimelineItem-detail-invisible"
          >
            2019-02-12detail
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
